//! Database review models.

use diesel::prelude::*;
use github_scbot_types::reviews::{GhReview, GhReviewState};
use serde::{Deserialize, Serialize};

use super::{PullRequestModel, RepositoryModel};
use crate::{
    errors::{DatabaseError, Result},
    schema::review,
    DbConn,
};

/// Review model.
#[derive(Debug, Deserialize, Serialize, Queryable, Identifiable, AsChangeset, PartialEq, Eq)]
#[table_name = "review"]
pub struct ReviewModel {
    /// Database ID.
    pub id: i32,
    /// Pull request database ID.
    pub pull_request_id: i32,
    /// Username.
    pub username: String,
    /// Review state.
    state: String,
    /// Is the review required?
    pub required: bool,
    /// Is the review valid?
    pub valid: bool,
}

#[derive(Insertable)]
#[table_name = "review"]
struct ReviewCreation {
    pub pull_request_id: i32,
    pub username: String,
    pub state: String,
    pub required: bool,
    pub valid: bool,
}

impl From<&ReviewModel> for ReviewCreation {
    fn from(model: &ReviewModel) -> Self {
        Self {
            pull_request_id: model.pull_request_id,
            username: model.username.clone(),
            state: model.state.clone(),
            required: model.required,
            valid: model.valid,
        }
    }
}

#[must_use]
pub struct ReviewModelBuilder<'a> {
    repo_model: &'a RepositoryModel,
    pr_model: &'a PullRequestModel,
    username: String,
    state: Option<GhReviewState>,
    required: Option<bool>,
    valid: Option<bool>,
}

impl<'a> ReviewModelBuilder<'a> {
    pub fn default<T: Into<String>>(
        repo_model: &'a RepositoryModel,
        pr_model: &'a PullRequestModel,
        username: T,
    ) -> Self {
        Self {
            repo_model,
            pr_model,
            username: username.into(),
            state: None,
            required: None,
            valid: None,
        }
    }

    pub fn from_model(
        repo_model: &'a RepositoryModel,
        pr_model: &'a PullRequestModel,
        review: &ReviewModel,
    ) -> Self {
        Self {
            repo_model,
            pr_model,
            username: review.username.clone(),
            state: Some(review.get_review_state()),
            required: Some(review.required),
            valid: Some(review.valid),
        }
    }

    pub fn from_github(
        repo_model: &'a RepositoryModel,
        pr_model: &'a PullRequestModel,
        review: &GhReview,
    ) -> Self {
        Self {
            repo_model,
            pr_model,
            username: review.user.login.clone(),
            state: Some(review.state),
            required: None,
            valid: None,
        }
    }

    pub fn username<T: Into<String>>(mut self, username: T) -> Self {
        self.username = username.into();
        self
    }

    pub fn state<T: Into<GhReviewState>>(mut self, state: T) -> Self {
        self.state = Some(state.into());
        self
    }

    pub fn required<T: Into<bool>>(mut self, required: T) -> Self {
        self.required = Some(required.into());
        self
    }

    pub fn valid<T: Into<bool>>(mut self, valid: T) -> Self {
        self.valid = Some(valid.into());
        self
    }

    fn build(&self) -> ReviewModel {
        ReviewModel {
            id: -1,
            pull_request_id: self.pr_model.id,
            username: self.username.clone(),
            state: self.state.unwrap_or(GhReviewState::Pending).to_string(),
            required: self.required.unwrap_or(false),
            valid: self.valid.unwrap_or(false),
        }
    }

    pub fn create_or_update(self, conn: &DbConn) -> Result<ReviewModel> {
        conn.transaction(|| {
            let mut handle = match ReviewModel::get_from_pull_request_and_username(
                conn,
                self.repo_model,
                self.pr_model,
                &self.username,
            ) {
                Ok(entry) => entry,
                Err(_) => {
                    let entry = self.build();
                    ReviewModel::create(conn, (&entry).into())?
                }
            };

            handle.state = match self.state {
                Some(s) => s.to_string(),
                None => handle.state,
            };
            handle.required = match self.required {
                Some(r) => r,
                None => handle.required,
            };
            handle.valid = match self.valid {
                Some(v) => v,
                None => handle.valid,
            };
            handle.save(conn)?;

            Ok(handle)
        })
    }
}

impl ReviewModel {
    /// Create builder.
    pub fn builder<'a>(
        repo_model: &'a RepositoryModel,
        pr_model: &'a PullRequestModel,
        username: &str,
    ) -> ReviewModelBuilder<'a> {
        ReviewModelBuilder::default(repo_model, pr_model, username)
    }

    /// Create builder from model.
    pub fn builder_from_model<'a>(
        repo_model: &'a RepositoryModel,
        pr_model: &'a PullRequestModel,
        model: &Self,
    ) -> ReviewModelBuilder<'a> {
        ReviewModelBuilder::from_model(repo_model, pr_model, model)
    }

    /// Create builder from GitHub review.
    pub fn builder_from_github<'a>(
        repo_model: &'a RepositoryModel,
        pr_model: &'a PullRequestModel,
        review: &GhReview,
    ) -> ReviewModelBuilder<'a> {
        ReviewModelBuilder::from_github(repo_model, pr_model, review)
    }

    fn create(conn: &DbConn, entry: ReviewCreation) -> Result<Self> {
        diesel::insert_into(review::table)
            .values(&entry)
            .get_result(conn)
            .map_err(Into::into)
    }

    /// List reviews.
    pub fn list(conn: &DbConn) -> Result<Vec<Self>> {
        review::table.load::<Self>(conn).map_err(Into::into)
    }

    /// List reviews from pull request database ID.
    pub fn list_from_pull_request_id(
        conn: &DbConn,
        pull_request_id: i32,
    ) -> Result<Vec<ReviewModel>> {
        review::table
            .filter(review::pull_request_id.eq(pull_request_id))
            .order_by(review::id)
            .get_results(conn)
            .map_err(Into::into)
    }

    /// Get review for pull request database ID and reviewer username.
    pub fn get_from_pull_request_and_username(
        conn: &DbConn,
        repository: &RepositoryModel,
        pull_request: &PullRequestModel,
        username: &str,
    ) -> Result<Self> {
        review::table
            .filter(review::pull_request_id.eq(pull_request.id))
            .filter(review::username.eq(username))
            .first(conn)
            .map_err(|_e| {
                DatabaseError::UnknownReviewState(
                    username.to_string(),
                    repository.get_path(),
                    pull_request.get_number(),
                )
            })
    }

    /// Get review state.
    pub fn get_review_state(&self) -> GhReviewState {
        self.state.as_str().into()
    }

    /// Set review state.
    pub fn set_review_state(&mut self, review_state: GhReviewState) {
        self.state = review_state.to_string();
    }

    /// Remove review.
    pub fn remove(&self, conn: &DbConn) -> Result<()> {
        diesel::delete(review::table.filter(review::id.eq(self.id))).execute(conn)?;

        Ok(())
    }

    /// Remove reviews for pull request.
    pub fn remove_all_for_pull_request(conn: &DbConn, pull_request_id: i32) -> Result<()> {
        diesel::delete(review::table.filter(review::pull_request_id.eq(pull_request_id)))
            .execute(conn)?;

        Ok(())
    }

    /// Save model instance to database.
    pub fn save(&mut self, conn: &DbConn) -> Result<()> {
        self.save_changes::<Self>(conn)?;

        Ok(())
    }
}

#[cfg(test)]
mod tests {
    use github_scbot_conf::Config;
    use pretty_assertions::assert_eq;

    use super::*;
    use crate::{tests::using_test_db, Result};

    #[actix_rt::test]
    async fn create_and_update() -> Result<()> {
        let config = Config::from_env();

        using_test_db(&config.clone(), "test_db_review", |pool| async move {
            let conn = pool.get()?;
            let repo =
                RepositoryModel::builder(&config, "me", "TestRepo").create_or_update(&conn)?;

            let pr = PullRequestModel::builder(&repo, 1234, "me").create_or_update(&conn)?;

            // Create review
            let mut entry = ReviewModel::builder(&repo, &pr, "him").create_or_update(&conn)?;

            assert_eq!(
                entry,
                ReviewModel {
                    id: entry.id,
                    pull_request_id: pr.id,
                    username: "him".into(),
                    state: GhReviewState::Pending.to_string(),
                    required: false,
                    valid: false
                }
            );

            // Manually update review
            entry.set_review_state(GhReviewState::Commented);
            entry.required = true;
            entry.valid = true;
            entry.save(&conn)?;

            // Now, update review with builder
            let entry = ReviewModel::builder(&repo, &pr, "him")
                .required(false)
                .create_or_update(&conn)?;

            assert_eq!(
                entry,
                ReviewModel {
                    id: entry.id,
                    pull_request_id: pr.id,
                    username: "him".into(),
                    state: GhReviewState::Commented.to_string(),
                    required: false,
                    valid: true
                }
            );

            assert_eq!(ReviewModel::list(&conn)?.len(), 1);

            Ok::<_, DatabaseError>(())
        })
        .await
    }
}
