@startuml Schema
class Repository {
    #id: Integer
    name: String
    owner: String
    default_strategy: String
    default_needed_reviewers_count: Integer
    pr_title_validation_regex: String
    manual_interaction: Boolean
    default_automerge: Boolean
}

class PullRequest {
    #id: Integer
    *repository_id: Integer
    number: Integer
    creator: String
    name: String
    base_branch: String
    head_branch: String
    step: String
    check_status: String
    qa_status: String
    needed_reviewers_count: Integer
    status_comment_id: Integer
    automerge: Boolean
    wip: Boolean
    locked: Boolean
    merged: Boolean
    closed: Boolean
    strategy_override: String
}

class Review {
    #id: Integer
    *pull_request_id: Integer
    username: String
    state: String
    required: Boolean
    valid: Boolean
}

class MergeRule {
    #id: Integer
    *repository_id: Integer
    base_branch: String
    head_branch: String
    strategy: String
}

class ExternalAccount {
    #username: String
    public_key: String
    private_key: String
}
class ExternalAccountRight {
    #*username: String
    #*repository_id: Integer
}

class Account {
    #username: String
    is_admin: Boolean
}

class HistoryWebhook {
    #id: Integer
    *repository_id: Integer
    *pull_request_id: Integer
    username: String
    received_at: DateTime
    event_key: String
    payload: String
}

Repository *-- PullRequest : has
Repository *-- MergeRule : has
PullRequest *-- Review : has
ExternalAccount *-- ExternalAccountRight : has
Repository *-- ExternalAccountRight : has
Repository *-- HistoryWebhook : has
PullRequest *-- HistoryWebhook : has
@enduml
